apps/demo-1/demo-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-1
  namespace: demo-1
  labels:
    app: demo-1
spec:
  selector:
    app: demo-1
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
